docs/examples/errors/error_handlers/server_sdk/blueprint.ron
(
    creation_location: (
        line: 5,
        column: 18,
        file: "errors/error_handlers/src/blueprint.rs",
    ),
    components: [
        import((
            sources: some([
                "crate",
            ]),
            relative_to: "error_handlers::blueprint",
            created_at: (
                package_name: "error_handlers",
                package_version: "0.1.0",
            ),
            registered_at: (
                line: 6,
                column: 8,
                file: "errors/error_handlers/src/blueprint.rs",
            ),
        )),
        routes_import((
            sources: some([
                "crate",
            ]),
            relative_to: "error_handlers::blueprint",
            created_at: (
                package_name: "error_handlers",
                package_version: "0.1.0",
            ),
            registered_at: (
                line: 8,
                column: 8,
                file: "errors/error_handlers/src/blueprint.rs",
            ),
        )),
    ],
)